custom scrollbar in single product fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -637,3 +637,18 @@ select:-webkit-autofill:active {
   
 }
 
+.delay__show{
+  animation: delayShow 0.6s;
+}
+
+@keyframes delayShow{
+  0% {
+    opacity: 0;
+  }
+  99%{
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
